# gridiron

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  security-audit.yaml
benches/: benchmark.rs
proptest-regressions/: lib.txt
proptest-regressions/digits/: util.txt
scripts/: README.md  compute_constants.py
src/: colt.rs  lib.rs
src/digits/: constant_bool.rs  constant_time_primitives.rs  ff.rs  ff31.rs  ff62.rs  signed.rs  unsigned.rs  util.rs
