[package]
name = "gridiron"
version = "0.10.0"
edition = "2021"
authors = ["IronCore Labs <code at ironcorelabs.com>"]
repository = "https://github.com/IronCoreLabs/gridiron"
description = "Rust finite field library with fixed size multi-word values."
exclude = [ ".gitignore", "proptest-regressions/*" ]
readme = "README.md"
categories = ["cryptography", "wasm"]
license = "Apache-2.0"
keywords = ["finite", "field", "crypto", "math"]
rust-version = "1.57.0"

[dependencies]
num-traits = "~0.2.11"

[profile.test]
opt-level = 2
debug = 2
debug-assertions = true
incremental = true
overflow-checks = true

[dev-dependencies]
proptest = "~1.0"
rand = "~0.8.0"
criterion = "~0.4.0"

[features]
unstable = []

[profile.bench]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
