[package]
name = "gridiron"
version = "0.12.2"
edition = "2024"
authors = ["IronCore Labs <code at ironcorelabs.com>"]
repository = "https://github.com/IronCoreLabs/gridiron"
description = "Rust finite field library with fixed size multi-word values."
exclude = [".gitignore", "proptest-regressions/*"]
readme = "README.md"
categories = ["cryptography", "wasm"]
license = "Apache-2.0"
keywords = ["finite", "field", "crypto", "math"]
rust-version = "1.88.0"

[features]
default = ["limb62"]
limb31 = []
limb62 = []
unstable = []

[dependencies]
num-traits = "0.2.11"

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
proptest = "1"
rand = "0.10"

[profile.test]
opt-level = 2
debug = 2
debug-assertions = true
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
